--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,41 @@
     background-color: #c00025;
     width: 100%;
     max-width: 550px;
+    height: 600px;
     border-radius: 15px;
     border: 2px solid grey;
     padding-bottom: 25px;
 }
+
+.number-container {
+    height: 70%;
+    width: 40%;
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 5%;
+    margin-top: 5%;
+ 
+}
+
+.number-button {
+    border-radius: 50%;
+    border: 0px;
+    height: 60px;
+    width: 60px;
+    background-color: navy;
+    color:white;
+    font-size: 25px;
+    box-shadow: 0px 3px black;
+    margin-right: 10px;
+    margin-bottom: 5%;
+}
+
+.zero-button {
+    width: 130px;
+    border-radius: 45%;
+
+}
+
 .display {
     margin-top: 25px;
     height: 100px;
@@ -19,4 +50,5 @@
     align-items: flex-end;
     padding-right: 8%;
     font-size: 5.0rem;
+
   }
